--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "bootstrap": "^5.1.3",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
+  },
+  "scripts": { 
+    "build": "webpack --config webpack.config.js" 
   }
 }
