--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "@hotwired/turbo-rails": "^7.1.3",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "stimulus-scroll-to": "^4.0.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   },
-  "scripts": { 
-    "build": "webpack --config webpack.config.js" 
+  "scripts": {
+    "build": "webpack --config webpack.config.js"
   }
 }
